# aicite

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  chunker.md  extractor.md  inline  install.sh  provider.md  storage-crud.md  validator.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/check_docs/: Cargo.toml
crates/check_docs/src/: comparator.rs  executor.rs  lib.rs  parser.rs  report.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  output.rs
crates/cli/src/commands/: check_docs.rs  context.rs  evaluate.rs  get.rs  health.rs  ingest.rs  list.rs  mod.rs  read.rs  refresh.rs  retrieve.rs  retry.rs  search.rs  setup.rs  tag.rs  trace.rs  workspace.rs
crates/common/: Cargo.toml
crates/common/src/: error.rs  exit.rs  lib.rs  types.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: context.rs  evaluate.rs  golden_provider.rs  ingest.rs  lib.rs  recovery.rs  refresh.rs  retrieve.rs  runtime_guard.rs
crates/engine/tests/: golden_test.rs  runtime_mode.rs
crates/engine/tests/golden/: fixtures.json  fixtures.rs  provider.rs
crates/engine/tests/golden/corpus/: api-reference.md  architecture.txt  security-policy.txt
crates/graph/: Cargo.toml
crates/graph/src/: heading_parser.rs  hierarchy.rs  lib.rs  types.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: chunker.rs  extractor.rs  lib.rs  sentence_chunker.rs  validator.rs
crates/ingest/tests/: ingest_e2e.rs
crates/providers/: Cargo.toml
crates/providers/src/: eval.rs  gemini.rs  lib.rs  ollama.rs  openai.rs
crates/retrieval/: Cargo.toml
crates/retrieval/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: backlog.rs  chunks.rs  concepts.rs  documents.rs  embeddings.rs  lib.rs  locks.rs  rate_limits.rs  semantic_links.rs  snapshots.rs  tags.rs  topics.rs  traces.rs  util.rs  workspace.rs
demo/: api-reference.md  architecture.txt  security-policy.txt
docs/: agent-usage-guide.md  demo.md  index.md  installation.md  rename-to-cite.md  rfc-install-setup-ux.md  v0.2.0-hierarchical-graph.md
docs/architecture/: v0.2.0-hierarchical-graph.md
docs/guides/: installation.md
docs/prd/: 01-product-brief.md  02-users-and-problems.md  03-mvp-scope.md  05-non-functional-requirements.md  06-ux-flows.md  07-system-architecture.md  09-api-contract.md  10-acceptance-criteria.md  11-risks-open-questions.md  12-legal-privacy-compliance.md  13-ai-ethics-governance.md  14-future-native-app.md  15-market-landscape.md  README.md  prd_changelog.md
docs/reports/: code-review-pending-items.md
docs/rfc/: rfc-install-setup-ux.md
docs/sdd/: README.md  roadmap.md  v0.2-phase-map.md
docs/sdd/phase-1-scaffold/: design.md  explore-notes.md  proposal.md  spec.md  tasks.md
docs/sdd/phase-2-ingest/: design.md  explore-notes.md  proposal.md  spec.md  tasks.md
docs/sdd/phase-3-retrieval/: design.md  explore-notes.md  proposal.md  spec.md  tasks.md
docs/sdd/phase-4-context/: design.md  explore-notes.md  proposal.md  spec.md  tasks.md
docs/sdd/phase-5-durability/: design.md  explore-notes.md  proposal.md  spec.md  tasks.md
docs/sdd/phase-6-evaluation/: design.md  explore-notes.md  proposal.md  spec.md  tasks.md
docs/sdd/phase-7-packaging/: design.md  explore-notes.md  proposal.md  spec.md  tasks.md
docs/sdd/phase-8-rename-cite/: explore-notes.md  migration-checklist.md  verification-evidence.md
docs/sdd/phase-9-installation-experience/: migration-checklist.md  verification-evidence.md
openspec/: CHANGELOG-docs.md  config.yaml  index.md
openspec/Improvements/: CITE_Pi_Integration.md  RAG_Benchmark_Guide.md
openspec/architecture/: cite-notes-hybrid.md  cite-v1-agent-interface.md  front-lobe-engine.md  v0.2.0-hierarchical-graph.md
openspec/changes/: README.md  roadmap.md
openspec/changes/error-remediation/: design.md  verify-report.md
openspec/changes/error-remediation-v2/: apply-progress.md  design.md
openspec/changes/install-setup-ux/: apply-progress.md  design.md  proposal.md  tasks.md
openspec/changes/phase-1-scaffold/: design.md  explore-notes.md
openspec/changes/phase-11-hierarchical-retrieval/: design.md  (+2 more)
openspec/guides/: agent-usage-guide.md  demo.md
openspec/prd/: 01-product-brief.md  02-users-and-problems.md  04-functional-requirements.md  05-non-functional-requirements.md  08-ai-retrieval-design.md  09-api-contract.md  prd_changelog.md
openspec/reports/: EVALUACION_CITE.md  SESSION_CONTEXT_2026-06-06.md  error-tracking.md
scripts/: ingest-self-docs.sh
(+153 files in other folders)
