[workspace]
resolver = "2"
members = [
  "crates/cli",
  "crates/engine",
  "crates/storage",
  "crates/config",
  "crates/graph",
  "crates/retrieval",
  "crates/ingest",
  "crates/providers",
  "crates/common",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/risaavedraf/aicite"

[workspace.dependencies]
# Internal crates
common = { path = "crates/common" }
config = { path = "crates/config" }
storage = { path = "crates/storage" }
engine = { path = "crates/engine" }
graph = { path = "crates/graph" }
ingest = { path = "crates/ingest" }
providers = { path = "crates/providers" }
retrieval = { path = "crates/retrieval" }
cli = { path = "crates/cli" }

# External dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.40", features = ["bundled"] }
toml = "1.1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
lopdf = "0.40"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
uuid = { version = "1", features = ["v4"] }
nanoid = "0.5"
dotenvy = "0.15"
dialoguer = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
