[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "harness"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
config = { workspace = true }
storage = { workspace = true }
engine = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
