[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "cite"
path = "src/main.rs"

[dependencies]
common = { workspace = true }
config = { workspace = true }
engine = { workspace = true }
storage = { workspace = true }
providers = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
dialoguer = { workspace = true }
