[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
common = { workspace = true }
storage = { workspace = true }
ingest = { workspace = true }
providers = { workspace = true }
config = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
